--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ animation: mymove 3s;
 
 .footer{
 	font-family: 'Cormorant SC', serif;
-	color: #111;
+	color: white;
 	text-align:center;
 	height:5%;
 	font-size:70%;
